--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@langchain/community": "^0.0.17",
+    "@langchain/openai": "^0.0.11",
+    "@supabase/supabase-js": "^2.39.3",
+    "dotenv": "^16.3.1",
+    "langchain": "^0.1.2",
+    "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.0.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
